# GSAtools

./: AUTHORS  INSTALL  M32K25_expel.mov  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  gmxdir.sh  index.html  params.json
Rscripts/: plot_MI_SA-PC1.R  plot_MI_over_time.R  plot_RMSD.R  plot_all_results.R  plot_eig_centrality.R  plot_entropy.R  plot_nMI_matrix.R  plot_profile.R  plot_transmat.R  remove_figures.sh
Rscripts/bashscripts/: extract_MI_value_from_log.sh
Rscripts/extradata/: example.MI.table  example.lf_eeMImat.out
Rscripts/modules/: FragMINetwork.R
Rscripts/pymolscripts/: README  drawMIweb.py
plugins/: showMIweb.py
scripts/: GSATOOLSRC.bash.in  GSATOOLSRC.csh.in  GSATOOLSRC.in  Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  g_sa_analyze.c  g_sa_encode.c  g_sa_encode.c.orig  tags
src/.deps/: code.Po  encode.Po  fragment_colour.Po  fragments.Po  g_sa_analyze.Po  g_sa_encode.Po  getfragments.Po  kabsch.Po  label.Po  matrix.Po  mergesort.Po  object.Po  partition.Po  probability.Po  quatRMSD.Po  safe.Po  score.Po  sequence.Po  transform_segment.Po  value.Po  vec2mat.Po
src/general/: matrix.c  matrix.h  mergesort.c  mergesort.h  safe.c  safe.h
src/partition/: label.c  label.h  object.c  object.h  partition.c  partition.h  score.c  score.h  value.c  value.h
src/sequence/: encode.c  encode.h  sequence.c  sequence.h
src/statistics/: code.c  code.h  probability.c  probability.h
src/structure/: fragment_colour.c  fragment_colour.h  fragments.c  fragments.h  fragments_coords.h  getfragments.c  getfragments.h  kabsch.c  kabsch.h  pdb_structure.h  quatRMSD.c  quatRMSD.h  transform_segment.c  transform_segment.h  vec2mat.c  vec2mat.h
test/: .lf_MImat.out  .lf_ZImat.out  .lf_eeMImat.out  .lf_jHmat.out  .lf_meanMImat.out  .lf_nMImat.out  .lf_pvalueMImat.out  .lf_stdMImat.out  test.sh
tests/: Makefile  Makefile.am  Makefile.in  Test001.sh  Test002.sh  Test003.sh  Test004.sh  Test005.sh  Test006.sh  Test007.sh  Test008.sh  Test009.sh  Test010.sh  Test011.sh  Test012.sh  Test013.sh  Test014.sh  Test015.sh  Test016.sh  Test017.sh  Test018.sh  Test019.sh  Test020.sh  Test021.sh  Test022.sh  Test023.sh  Test024.sh  Test025.sh  Test026.sh  Test027.sh  Test028.sh  TestEnv.sh
tests/data/: test.80ns.pc1.xvg  test.gf.xpm  test.gf_entropy.xvg  test.gf_rmsd.xvg  test.gf_str.fasta  test.gf_str.out  test.lf.xpm  test.lf_MI.80ns.out  test.lf_MImat.out  test.lf_entropy.xvg  test.lf_nMImat.out  test.lf_rmsd.xvg  test.lf_str.fasta  test.lf_transmat.out  test.xtc
tutorial/: clean_tutorial.sh  run_tutorial.sh
tutorial/00_input_data/: 00_check_bin.sh  T00.tpr
tutorial/01_SA_encoding/: .RData  01_SA_encoding.sh  01_plot_RMSD.R  01_plot_RMSD.Rout  01_ps.m2p  T01.eps.stdout  T01.lf.eps  T01.lf.xpm  T01.lf_rmsd.xvg  T01.lf_str.fasta  T01.lf_str.out  T01.stdout
tutorial/02_SA_statistics/: .RData  02_SA_statistics.sh  02_plot_entropy.R  02_plot_entropy.Rout  02_plot_profile.R  02_plot_profile.Rout  02_plot_transmat.R  02_plot_transmat.Rout  T02.lf_entropy.xvg  T02.lf_transmat.out  T02.stdout
tutorial/03_local_correlation/: .RData  03_local_correlation.sh  03_plot_nMI_matrix.R  03_plot_nMI_matrix.Rout  T03.lf_jHmat.out  T03.stdout
tutorial/04_network_analysis/: .RData  04_network_analysis.R  04_network_analysis.Rout  04_network_analysis.sh  T00.lf_pvalueMImat.out  T04.LF.colorData  T04.LF.cys.gml  T04.LF.gml  T04.LF.graphml  T04.LF.pcalayout  T04.LF_enpdMI.mat  igraph2cytoscape.py
tutorial/05_functional_analysis/: .RData  05_functional_analysis.sh  05_plot_MI_SA-PC1.R  05_plot_MI_SA-PC1.Rout  05_plot_MI_over_time.R  05_plot_MI_over_time.Rout  T00.F80.ndx  T05.stdout
