EXTRA_DIST = $(TESTS) data output TestEnv.sh
TESTS_ENVIRONMENT = source $(PWD)/TestEnv.sh;
TESTS=  Test001.sh\
	Test002.sh\
	Test003.sh\
	Test004.sh\
	Test005.sh\
	Test006.sh\
	Test007.sh\
	Test008.sh\
	Test009.sh\
	Test010.sh\
	Test011.sh\
	Test012.sh\
	Test013.sh\
	Test014.sh\
	Test015.sh\
	Test016.sh\
	Test017.sh\
	Test018.sh\
	Test019.sh\
	Test020.sh\
	Test021.sh\
	Test022.sh\
	Test023.sh\
	Test024.sh\
	Test025.sh\
	Test026.sh\
	Test027.sh\
	Test028.sh

clean-local:
	-rm -f output/*/*
